<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="2"
                android:padding="4dp"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:padding="4dp"
                android:layout_weight="7"
                android:id="@+id/name"
                android:textSize="@dimen/textsize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_weight="2"
                android:padding="4dp"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="7"
                android:id="@+id/type"
                android:textSize="@dimen/textsize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:layout_weight="2"
                android:padding="4dp"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="7"
                android:id="@+id/duration"
                android:textSize="@dimen/textsize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_weight="2"
                android:padding="4dp"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="7"
                android:id="@+id/start"
                android:textSize="@dimen/textsize"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phase"
                android:layout_weight="2"
                android:padding="4dp"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/textsize"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="7"
                android:id="@+id/phase"
                android:textSize="@dimen/textsize"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:id="@+id/alertAlarm"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/ic_alert_on"/>

</LinearLayout>